# XVI-CatPhan

./: .gitignore  .readthedocs.yml  BUILD_EXECUTABLES.md  CHANGELOG.md  INSTALLATION.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: github-pages.yml  release.yml
docs/: BUILD_EXECUTABLES.md  Makefile  api_reference.rst  conf.py  development_docs.rst  executable_application.rst  getting_started.rst  index.rst  installation.rst  project_background.rst  quickstart.rst  reference_material.rst  usage.rst
docs/development/: SPHINX_GUIDE.md  SPHINX_SETUP.md
docs/guides/: HOW_TO_USE.md
docs/reference/: QUICK_REFERENCE.md  REFACTORING_SUMMARY.md
packaging/pyinstaller/: CatPhanAnalyzer.spec
scripts/: build_executables.bat
src/catphan_analysis/: __init__.py  _version.py  analyzer.py  dicom_listener.py  listen_and_analyze.py  main.py  select_and_analyze.py
src/catphan_analysis/modules/: __init__.py  ctp404.py  ctp486.py  ctp528.py
src/catphan_analysis/utils/: geometry.py  image_processing.py
xvicatphan/: .gitignore  BUILD_DOCS.md  BUILD_EXECUTABLES.md  CHANGELOG.md  CLASS_ARCHITECTURE.md  CatPhanAnalyzer.spec  HOW_TO_USE.md  INSTALLATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  SPHINX_GUIDE.md  SPHINX_SETUP.md  ScriptLog.txt  analyzeDICOM_Catphan.py  build_executables.bat  examples.py  listen_and_analyze.py  main.py  processDICOMcat.py  pyproject.toml  requirements.txt  select_and_analyze.py  setup.py
xvicatphan/catphan_analysis/: __init__.py  analyzer.py  dicom_listener.py  listen_and_analyze.py  main.py  select_and_analyze.py
xvicatphan/catphan_analysis/modules/: __init__.py  ctp404.py  ctp486.py  ctp528.py
xvicatphan/catphan_analysis/utils/: __init__.py  geometry.py  image_processing.py
xvicatphan/docs/: .buildinfo  conf.py  examples.rst  index.rst  quickstart.rst  user_guide.rst
